A nicer statusline which fades inactive windows and adds the session name

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,9 +31,11 @@ set -g message-fg green
 set-option -g status-right-length 100
 set-option -g status-left-length 100
 set-option -g status-utf8 on
-set-option -g status-left ""
+set-option -g status-left "#[fg=cyan]#S:"
 set -g status-right "#[fg=cyan, bold]%a %B %d | %I:%M %p"
 set -g default-terminal "screen-256color"
+set-window-option -g window-status-format '#[fg=cyan,dim]#I:#[fg=colour240,dim]#W#F'
+set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=green]#W#F';
 
 # pretty panes
 set-option -g pane-active-border-fg green
