Start window numbering at 1

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,7 @@ bind-key -t vi-edit Down history-down
 setw -g automatic-rename on
 
 # pretty statusbar
+set -g base-index 1
 set -g status-bg default
 set -g status-fg brightgreen
 set -g message-bg default
