work tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,16 @@
-# reload config without killing server
-bind R source-file ~/.tmux.conf 
+bind R source-file ~/.tmux.conf
 
-# more intuitive keybindings for splitting
+unbind C-b
+set -g prefix C-a
+bind a send-prefix
+bind-key C-a last-window
+
 unbind %
-bind h split-window -v
+bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
-bind v split-window -h
+bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-# set vi keys
 set-option -sg escape-time 0
 setw -g mode-keys vi
 unbind [
@@ -19,30 +22,31 @@ bind-key -t vi-copy 'y' copy-selection
 set -g status-keys vi
 bind-key -t vi-edit Up history-up
 bind-key -t vi-edit Down history-down
+unbind-key j
+bind-key j select-pane -D 
+unbind-key k
+bind-key k select-pane -U
+unbind-key h
+bind-key h select-pane -L
+unbind-key l
+bind-key l select-pane -R
 
-# enable auto renaming
+set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[fg=colour241]#W#[fg=colour241,dim]#F'
+set-window-option -g window-status-current-format '#[bg=black,fg=cyan,bold]#I#[bg=black,fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
+
 setw -g automatic-rename on
-
-# pretty statusbar
-set -g base-index 1
+set -g default-terminal "gnome-256color"
 set -g status-bg default
 set -g status-fg brightgreen
-set -g message-bg default
-set -g message-fg green
+set -g base-index 1
 set-option -g status-right-length 100
 set-option -g status-left-length 100
 set-option -g status-utf8 on
 set-option -g status-left "#[fg=cyan]#S:"
-set -g status-right "#[fg=cyan, bold]%a %B %d | %I:%M %p"
-set -g default-terminal "screen-256color"
-set-window-option -g window-status-format '#[fg=cyan,dim]#I:#[fg=colour240,dim]#W#F'
-set-window-option -g window-status-current-format '#[fg=cyan,bold]#I:#[fg=green]#W#F';
+set -g status-right "#[fg=cyan]%a %B %d | %I:%M %p"
 
-# pretty panes
 set-option -g pane-active-border-fg green
 set-option -g pane-border-fg cyan
 set-option -g pane-active-border-bg default
-
-# scren-style prefix
-set -g prefix C-a
-bind a send-prefix
+set-option -g message-fg green
+set-option -g message-bg black
