Better tmux colors and no more 80-line limits

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ unbind-key l
 bind-key l select-pane -R
 
 set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[fg=colour241]#W#[fg=colour241,dim]#F'
-set-window-option -g window-status-current-format '#[bg=black,fg=cyan,bold]#I#[bg=black,fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
+set-window-option -g window-status-current-format '#[bg=none,fg=cyan,bold]#I#[bg=none,fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
 
 setw -g automatic-rename on
 set -g default-terminal "gnome-256color"
