Updating format strings to be Tmux 2.0 compatible

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ unbind-key l
 bind-key l select-pane -R
 
 set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[fg=colour241]#W#[fg=colour241,dim]#F'
-set-window-option -g window-status-current-format '#[bg=none,fg=cyan,bold]#I#[bg=none,fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
+set-window-option -g window-status-current-format '#[fg=cyan,bold]#I#[fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
 
 setw -g automatic-rename on
 set -g default-terminal "gnome-256color"
@@ -42,7 +42,7 @@ set -g base-index 1
 set-option -g status-right-length 100
 set-option -g status-left-length 100
 set-option -g status-utf8 on
-set-option -g status-left "#[fg=cyan]#S:"
+set-option -g status-left "#[fg=cyan]#S: "
 set -g status-right "#[fg=cyan]%a %B %d | %I:%M %p"
 
 set-option -g pane-active-border-fg green
