Updating for pane title support

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,9 +6,9 @@ bind a send-prefix
 bind-key C-a last-window
 
 unbind %
-bind b split-window -v -c "#{pane_current_path}"
+bind b split-window -c "#{pane_current_path}" -v
 unbind '"'
-bind v split-window -h -c "#{pane_current_path}"
+bind v split-window -c "#{pane_current_path}" -h
 bind c new-window -c "#{pane_current_path}"
 
 set-option -sg escape-time 0
@@ -43,7 +43,7 @@ set-option -g status-right-length 100
 set-option -g status-left-length 100
 set-option -g status-utf8 on
 set-option -g status-left "#[fg=cyan]#S: "
-set -g status-right "#[fg=cyan]%a %B %d | %I:%M %p"
+set -g status-right "#[fg=green] #{=30:pane_title} #[fg=cyan]| %a %B %d | %I:%M %p"
 
 set-option -g pane-active-border-fg green
 set-option -g pane-border-fg cyan
