--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ unbind '"'
 bind v split-window -c "#{pane_current_path}" -h
 bind c new-window -c "#{pane_current_path}"
 
+set-option -g default-command "/opt/local/bin/reattach-to-user-namespace bash"
 set-option -sg escape-time 0
 setw -g mode-keys vi
 unbind [
