--- a/tmux.conf
+++ b/tmux.conf
@@ -50,3 +50,5 @@ set-option -g pane-border-fg cyan
 set-option -g pane-active-border-bg default
 set-option -g message-fg green
 set-option -g message-bg black
+
+set-option -g history-limit 10000
