--- a/tmux.conf
+++ b/tmux.conf
@@ -21,8 +21,8 @@ bind p paste-buffer
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 set -g status-keys vi
-bind-key -t vi-edit Up history-up
-bind-key -t vi-edit Down history-down
+bind-key -Tvi-edit Up send -X history-up
+bind-key -Tvi-edit Down send -X history-down
 unbind-key j
 bind-key j select-pane -D 
 unbind-key k
