--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,10 @@ unbind '"'
 bind v split-window -c "#{pane_current_path}" -h
 bind c new-window -c "#{pane_current_path}"
 
-set-option -g default-command "/opt/local/bin/reattach-to-user-namespace bash"
-set-option -sg escape-time 0
+set -g default-command "/opt/local/bin/reattach-to-user-namespace bash"
+set -sg escape-time 0
+
+# VIM binds
 setw -g mode-keys vi
 unbind [
 bind Escape copy-mode
@@ -32,23 +34,21 @@ bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
 
-set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[fg=colour241]#W#[fg=colour241,dim]#F'
-set-window-option -g window-status-current-format '#[fg=cyan,bold]#I#[fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
-
+setw -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[fg=colour241]#W#[fg=colour241,dim]#F'
+setw -g window-status-current-format '#[fg=cyan,bold]#I#[fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
 setw -g automatic-rename on
+
 set -g default-terminal "gnome-256color"
-set -g status-bg default
-set -g status-fg brightgreen
 set -g base-index 1
-set-option -g status-right-length 100
-set-option -g status-left-length 100
-set-option -g status-left "#[fg=cyan]#S: "
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left "#[fg=cyan]#S: "
 set -g status-right "#[fg=green] #{=150:pane_title} #[fg=blue]| #[fg=cyan]%a %B %d #[fg=blue]| #[fg=cyan]%I:%M %p"
 
-set-option -g pane-active-border-fg green
-set-option -g pane-border-fg cyan
-set-option -g pane-active-border-bg default
-set-option -g message-fg green
-set-option -g message-bg black
+set -g status-style bg=default,fg=brightgreen
+set -g pane-active-border-style fg=green
+set -g pane-border-style fg=cyan
+set -g pane-active-border-style bg=default
+set -g message-style fg=green,bg=black
 
-set-option -g history-limit 10000
+set -g history-limit 10000
