Stop using 'reattach-to-user-namespace' wrapper

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,6 @@ unbind '"'
 bind v split-window -c "#{pane_current_path}" -h
 bind c new-window -c "#{pane_current_path}"
 
-set -g default-command "/opt/local/bin/reattach-to-user-namespace bash"
 set -sg escape-time 0
 
 # VIM binds
@@ -21,7 +20,7 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 set -g status-keys vi
 bind-key -Tvi-edit Up send -X history-up
 bind-key -Tvi-edit Down send -X history-down
