--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ setw -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[fg=colour241]#W#[fg=c
 setw -g window-status-current-format '#[fg=cyan,bold]#I#[fg=cyan]:#[fg=green,bold]#W#[fg=dim]#F'
 setw -g automatic-rename on
 
-set -g default-terminal "gnome-256color"
+set -g default-terminal "xterm-256color"
 set -g base-index 1
 set -g status-right-length 100
 set -g status-left-length 100
